# validate

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN_PRINCIPLES.md  IDENTITY.md
src/validate/: main.py
src/validate/contextproviders/: base.py  jira.py
src/validate/core/: cli.py  config_loader.py  context_management.py  models.py  plugin_discovery.py  validator_selection.py
src/validate/core/contexts/: base.py  jira.py
src/validate/core/problem_types/: base.py  jira.py
src/validate/remediators/: base.py
src/validate/remediators/jira/: connection_remediator.py  screen_remediator.py
src/validate/reporting/: brief_formatter.py  json_formatter.py  reporter.py  verbose_formatter.py
src/validate/validators/: base.py
src/validate/validators/jira/: create_screen_validator.py  duplicate_mapping_validator.py  edit_screen_validator.py  field_existence_validator.py  schema_compatibility_validator.py
