[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validate"
version = "1.0.0"
description = "Flexible validation and auto-remediation framework"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "jira>=3.5.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[project.scripts]
validate = "validate.main:main"

[project.entry-points."validate.plugins"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
